Add export buttons section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
 
     <section class="card">
       <div id="result" class="result">Your table will appear here.</div>
+
+      <div id="exportActions" class="actions" style="display:none; margin-top:12px;">
+        <button id="copyTable" type="button" class="btn secondary">Copy table</button>
+        <button id="downloadCsv" type="button" class="btn secondary">Download CSV</button>
+      </div>
     </section>
 
     <footer class="footer">
