Cache bust script include

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     </footer>
   </main>
 
-  <script src="/script.js"></script>
+  <!-- Cache-busted JS so the newest script loads (fixes hidden export buttons) -->
+  <script src="/script.js?v=3"></script>
 </body>
 </html>
