Cache bust script v4

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div id="result" class="result">Your table will appear here.</div>
 
       <div id="exportActions" class="actions" style="display:none; margin-top:12px;">
-        <button id="copyTable" type="button" class="btn secondary">Copy table</button>
+        <button id="copyTable" type="button" class="btn secondary">Copy (Excel-ready)</button>
         <button id="downloadCsv" type="button" class="btn secondary">Download CSV</button>
       </div>
     </section>
@@ -38,7 +38,7 @@
     </footer>
   </main>
 
-  <!-- Cache-busted JS so the newest script loads (fixes hidden export buttons) -->
-  <script src="/script.js?v=3"></script>
+  <!-- Cache-bust so you ALWAYS load the newest script.js -->
+  <script src="/script.js?v=4"></script>
 </body>
 </html>
