Fix examples HTML + bump script to v7

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </footer>
   </main>
 
-  <!-- bump version so newest JS loads -->
-  <script src="/script.js?v=6"></script>
+  <!-- Cache-bust: force newest script to load -->
+  <script src="/script.js?v=7"></script>
 </body>
 </html>
