Rename Download CSV to Download Excel

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section class="card">
       <div class="hint" style="margin-bottom:10px;">
-        Tip: Include the official product link in each description if you have it — it helps you jump to the right page after you decide.
+        Tip: Include the official product link in each description if you have it — it helps you lead yourself to the right page after you decide.
       </div>
 
       <div class="card" style="margin-top:0; padding:14px;">
@@ -59,7 +59,8 @@
 
       <div id="exportActions" class="actions" style="display:none; margin-top:12px;">
         <button id="copyTable" type="button" class="btn secondary">Copy (Excel-ready)</button>
-        <button id="downloadCsv" type="button" class="btn secondary">Download CSV</button>
+        <!-- SAME ID for reliability, NEW LABEL -->
+        <button id="downloadCsv" type="button" class="btn secondary">Download Excel</button>
       </div>
     </section>
 
@@ -68,6 +69,6 @@
     </footer>
   </main>
 
-  <script src="/script.js?v=9"></script>
+  <script src="/script.js?v=10"></script>
 </body>
 </html>
